# SpliceDrift

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_input.tsv  generate_example_data.py  results.tsv
splicedrift/: __init__.py  __main__.py  cli.py  io.py  model.py  plotting.py
tests/: test_model.py
